in class work, everyone did stuff

--- a/pop.html
+++ b/pop.html
@@ -2,10 +2,13 @@
 <html>
   <head><title>SVG Demo</title></head>
   <body>
-    <svg id="vimage" height="500"
-	  width="1000" style="border: 1px solid;">
-      <circle id="circle" cx="250" cy="250" r="100"
+    <svg id="vimage" height="600"
+	  width="600" style="border: 1px solid;">
+      <circle id="circle" cx="300" cy="300" r="50"
 	            fill="yellow" stroke="black"/>
     </svg>
+    <h3 id="score"> Score: 0</h3>
+    <h3 id="timer"> Time Left: 60</h3>
+
   </body>
 <script src="pop.js"></script>
