attempting restart feature

--- a/pop.html
+++ b/pop.html
@@ -8,7 +8,8 @@
 	            fill="yellow" stroke="black"/>
     </svg>
     <h3 id="score"> Score: 0</h3>
-    <h3 id="timer"> Time Left: 60</h3>
+    <h3 id="timer"> Time Left: 60 </h3>
+    <button type="button" id="restart_btn"> Restart </button>
 
   </body>
 <script src="pop.js"></script>
