--- a/pop.html
+++ b/pop.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head><title>SVG Demo</title></head>
+  <head>
+    <title>BubblePOP</title>
+    <h2> BubblePOP </h2> 
+    <h3> Nellie Spektor, Jion Fairchild, David Rothblatt </h3>
+  </head>
+
   <body>
+    <i> click on the bubble to start the timer </i> <br><br>
     <svg id="vimage" height="600"
 	  width="600" style="border: 1px solid;">
       <circle id="circle" cx="300" cy="300" r="50"
@@ -12,4 +18,5 @@
     <button type="button" id="restart_btn"> Restart </button>
 
   </body>
+
 <script src="pop.js"></script>
