image and endscreen and color change

--- a/pop.html
+++ b/pop.html
@@ -8,10 +8,12 @@
 
   <body>
     <i> click on the bubble to start the timer </i> <br><br>
+    <h2 id="gameOver"></h2>
     <svg id="vimage" height="600"
 	  width="600" style="border: 1px solid;">
+      <image xlink:href="http://www.birthdaydirect.com/images/29787-ocean-and-sky-backdrop.jpg" x="0" y="0" height="600px" width="600px"/>
       <circle id="circle" cx="300" cy="300" r="50"
-	            fill="yellow" stroke="black"/>
+	            fill="aqua" stroke="black"/>
     </svg>
     <h3 id="score"> Score: 0</h3>
     <h3 id="timer"> Time Left: 60 </h3>
