--- a/pop.html
+++ b/pop.html
@@ -31,6 +31,7 @@
       <h3><u> Stats </u></h3> 
       <h3 id="score"> Score: 0</h3>
       <h3 id="timer"> Time Left: 60 </h3>
+      <h3 id="gameOver"> </h3>
       <button type="button" id="restart_btn"> Restart </button>
 
     </div>
