--- a/pop.html
+++ b/pop.html
@@ -31,11 +31,13 @@
       <h3><u> Stats </u></h3> 
       <h3 id="score"> Score: 0</h3>
       <h3 id="timer"> Time Left: 60 </h3>
-      <h3 id="gameOver"> </h3>
       <button type="button" id="restart_btn"> Restart </button>
+
+      <h2 id="gameOver"> </h2> 
 
     </div>
 
   </body>
 
 <script src="pop.js"></script>
+</html>
